@@ -1,3 +1,8 @@
+*** 20010624_4 by greg
+- cough, compile check failed
+- revving config.h level
+
+
 *** 20010624_3 by greg
 - removed bogus if statement
 - damn style nazis
